feature: 初始化动车数据（后续优化卧铺逻辑）